src/test/deca/syntax/valid/LE/testThis1.deca
//test pour les classes
//test du this.

class C1 {
    int a ;

    void c1 (int valeur) {
        this.a = valeur ;
    }
}

{
    C1 var ;
    var.c1(3) ;
}