src/test/deca/syntax/invalid/LE/MethSansParenthese.deca
//test invalide
//methode sans parenthese 

class c1 {
    int a ;

    void c1 (int b) {
        a = b ;
    }

    void affichage {
        println("j'aime manger") ;
    }
}